--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1,24 +1,27 @@
-m4trace:aclocal.m4:1465: -1- m4_include([build-aux/m4/ax_boost_base.m4])
-m4trace:aclocal.m4:1466: -1- m4_include([build-aux/m4/ax_boost_chrono.m4])
-m4trace:aclocal.m4:1467: -1- m4_include([build-aux/m4/ax_boost_filesystem.m4])
-m4trace:aclocal.m4:1468: -1- m4_include([build-aux/m4/ax_boost_program_options.m4])
-m4trace:aclocal.m4:1469: -1- m4_include([build-aux/m4/ax_boost_system.m4])
-m4trace:aclocal.m4:1470: -1- m4_include([build-aux/m4/ax_boost_thread.m4])
-m4trace:aclocal.m4:1471: -1- m4_include([build-aux/m4/ax_boost_unit_test_framework.m4])
-m4trace:aclocal.m4:1472: -1- m4_include([build-aux/m4/ax_check_compile_flag.m4])
-m4trace:aclocal.m4:1473: -1- m4_include([build-aux/m4/ax_check_link_flag.m4])
-m4trace:aclocal.m4:1474: -1- m4_include([build-aux/m4/ax_check_preproc_flag.m4])
-m4trace:aclocal.m4:1475: -1- m4_include([build-aux/m4/ax_cxx_compile_stdcxx.m4])
-m4trace:aclocal.m4:1476: -1- m4_include([build-aux/m4/ax_gcc_func_attribute.m4])
-m4trace:aclocal.m4:1477: -1- m4_include([build-aux/m4/ax_pthread.m4])
-m4trace:aclocal.m4:1478: -1- m4_include([build-aux/m4/bitcoin_find_bdb48.m4])
-m4trace:aclocal.m4:1479: -1- m4_include([build-aux/m4/bitcoin_qt.m4])
-m4trace:aclocal.m4:1480: -1- m4_include([build-aux/m4/bitcoin_subdir_to_include.m4])
-m4trace:aclocal.m4:1481: -1- m4_include([build-aux/m4/libtool.m4])
-m4trace:aclocal.m4:1482: -1- m4_include([build-aux/m4/ltoptions.m4])
-m4trace:aclocal.m4:1483: -1- m4_include([build-aux/m4/ltsugar.m4])
-m4trace:aclocal.m4:1484: -1- m4_include([build-aux/m4/ltversion.m4])
-m4trace:aclocal.m4:1485: -1- m4_include([build-aux/m4/lt~obsolete.m4])
+m4trace:aclocal.m4:991: -1- AC_SUBST([am__quote])
+m4trace:aclocal.m4:991: -1- AC_SUBST_TRACE([am__quote])
+m4trace:aclocal.m4:991: -1- m4_pattern_allow([^am__quote$])
+m4trace:aclocal.m4:1448: -1- m4_include([build-aux/m4/ax_boost_base.m4])
+m4trace:aclocal.m4:1449: -1- m4_include([build-aux/m4/ax_boost_chrono.m4])
+m4trace:aclocal.m4:1450: -1- m4_include([build-aux/m4/ax_boost_filesystem.m4])
+m4trace:aclocal.m4:1451: -1- m4_include([build-aux/m4/ax_boost_program_options.m4])
+m4trace:aclocal.m4:1452: -1- m4_include([build-aux/m4/ax_boost_system.m4])
+m4trace:aclocal.m4:1453: -1- m4_include([build-aux/m4/ax_boost_thread.m4])
+m4trace:aclocal.m4:1454: -1- m4_include([build-aux/m4/ax_boost_unit_test_framework.m4])
+m4trace:aclocal.m4:1455: -1- m4_include([build-aux/m4/ax_check_compile_flag.m4])
+m4trace:aclocal.m4:1456: -1- m4_include([build-aux/m4/ax_check_link_flag.m4])
+m4trace:aclocal.m4:1457: -1- m4_include([build-aux/m4/ax_check_preproc_flag.m4])
+m4trace:aclocal.m4:1458: -1- m4_include([build-aux/m4/ax_cxx_compile_stdcxx.m4])
+m4trace:aclocal.m4:1459: -1- m4_include([build-aux/m4/ax_gcc_func_attribute.m4])
+m4trace:aclocal.m4:1460: -1- m4_include([build-aux/m4/ax_pthread.m4])
+m4trace:aclocal.m4:1461: -1- m4_include([build-aux/m4/bitcoin_find_bdb48.m4])
+m4trace:aclocal.m4:1462: -1- m4_include([build-aux/m4/bitcoin_qt.m4])
+m4trace:aclocal.m4:1463: -1- m4_include([build-aux/m4/bitcoin_subdir_to_include.m4])
+m4trace:aclocal.m4:1464: -1- m4_include([build-aux/m4/libtool.m4])
+m4trace:aclocal.m4:1465: -1- m4_include([build-aux/m4/ltoptions.m4])
+m4trace:aclocal.m4:1466: -1- m4_include([build-aux/m4/ltsugar.m4])
+m4trace:aclocal.m4:1467: -1- m4_include([build-aux/m4/ltversion.m4])
+m4trace:aclocal.m4:1468: -1- m4_include([build-aux/m4/lt~obsolete.m4])
 m4trace:configure.ac:9: -1- AC_INIT([BeetleCoin Core], [_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION], [www.beetlecoin.org], [beetlecoin])
 m4trace:configure.ac:9: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:9: -1- m4_pattern_forbid([_AC_])
@@ -205,7 +208,7 @@ m4trace:configure.ac:23: -1- AH_OUTPUT([00002], [#define BEETLECOIN_CONFIG_H])
 m4trace:configure.ac:24: -1- AH_OUTPUT([zzzz3], [#endif //BEETLECOIN_CONFIG_H])
 m4trace:configure.ac:30: -1- AM_INIT_AUTOMAKE([no-define subdir-objects foreign])
 m4trace:configure.ac:30: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:30: -1- AM_AUTOMAKE_VERSION([1.15])
+m4trace:configure.ac:30: -1- AM_AUTOMAKE_VERSION([1.16.1])
 m4trace:configure.ac:30: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:30: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:30: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -357,9 +360,6 @@ m4trace:configure.ac:45: -1- m4_pattern_allow([^DEPDIR$])
 m4trace:configure.ac:45: -1- AC_SUBST([am__include])
 m4trace:configure.ac:45: -1- AC_SUBST_TRACE([am__include])
 m4trace:configure.ac:45: -1- m4_pattern_allow([^am__include$])
-m4trace:configure.ac:45: -1- AC_SUBST([am__quote])
-m4trace:configure.ac:45: -1- AC_SUBST_TRACE([am__quote])
-m4trace:configure.ac:45: -1- m4_pattern_allow([^am__quote$])
 m4trace:configure.ac:45: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
 m4trace:configure.ac:45: -1- AC_SUBST([AMDEP_TRUE])
 m4trace:configure.ac:45: -1- AC_SUBST_TRACE([AMDEP_TRUE])
@@ -1561,7 +1561,7 @@ m4trace:configure.ac:963: -1- AH_OUTPUT([COPYRIGHT_YEAR], [/* Version is release
 m4trace:configure.ac:964: -1- AC_SUBST([CLIENT_VERSION_MAJOR], [2])
 m4trace:configure.ac:964: -1- AC_SUBST_TRACE([CLIENT_VERSION_MAJOR])
 m4trace:configure.ac:964: -1- m4_pattern_allow([^CLIENT_VERSION_MAJOR$])
-m4trace:configure.ac:965: -1- AC_SUBST([CLIENT_VERSION_MINOR], [0])
+m4trace:configure.ac:965: -1- AC_SUBST([CLIENT_VERSION_MINOR], [1])
 m4trace:configure.ac:965: -1- AC_SUBST_TRACE([CLIENT_VERSION_MINOR])
 m4trace:configure.ac:965: -1- m4_pattern_allow([^CLIENT_VERSION_MINOR$])
 m4trace:configure.ac:966: -1- AC_SUBST([CLIENT_VERSION_REVISION], [0])
